# ImmersiveLibrary

./: .gitignore  Dockerfile  README.md  api_types.py  compose.yml  main.py  pyproject.toml  run.sh  tests.py  utils.py
immersive_library/: __init__.py  api.py  api_types.py  common.py  main.py  models.py  rendering.py  utils.py
immersive_library/routers/: auth.py  content.py  like.py  misc.py  report.py  tag.py  tools.py  user.py  viewer.py
immersive_library/routers/deprecated/: content.py  user.py
immersive_library/validators/: validator.py
immersive_library/validators/common/: __init__.py  image.py  json_meta.py  max_size.py  read_only.py  report.py  title_length_validator.py
immersive_library/validators/mca/: __init__.py  invalid_report.py  valid.py
java/: Auth.java
modules/: module.py
modules/mca/: invalid_report.py  valid.py
python/: .env  api_types.py  main.py  requirements.txt  tests.py  utils.py
python/modules/: module.py
python/modules/mca/: invalid_report.py  valid.py
python/static/: model.js  style.css
python/templates/: statistics.html
res/: page.html  style.css
static/: auth.js  embed.js  pnbt.js  style.css
static/default/: style.css
static/furniture/: embed.js
static/mca/: embed.js  renderer.js  style.css
templates/: contact.jinja  index.jinja  login.jinja  privacy.jinja  skin.jinja  success.jinja  tos.jinja  verify_login.jinja
templates/default/: project.jinja  render.jinja  view.jinja
templates/mca/: project.jinja  view.jinja
