[tool.poetry]
name = "immersive-library"
version = "0.1.0"
description = ""
authors = ["Luke100000 <jonas.peche@aon.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
starlette = "^0.41.2"
pydantic = "^2.9.2"
google-auth = "^2.35.0"
databases = "^0.9.0"
google-api-python-client = "^2.149.0"
orjson = "^3.10.10"
prometheus-fastapi-instrumentator = "^7.0.0"
pillow = "^11.0.0"
aiosqlite = "^0.20.0"
python-multipart = "0.0.19"
numpy = "<2"
jinja2 = "^3.1.4"
uvicorn = "^0.32.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
ignore = ["E402"]
